test/expected/const_cast_i-c++03.out
const cast x into int
                  ^
19: error: invalid const_cast type "integer"; must be a pointer, pointer to member, or reference
